checkpoint for moving admin view stuff to separate blueprint

--- a/templates/app.html
+++ b/templates/app.html
@@ -198,7 +198,7 @@
      // add css and attributes
      $(".actions button").attr({
        type: 'submit',
-       name: "submit_func"
+       name: "action"
      });
 
      // error dialog
