add View enum and clean up info_data (I think) for mobile, add SecurityMixin, add mobile_api rerouting, improve dflt_ctx_mapper
need to continue working on context mapping, and fixing error handling for g.api_call

--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -343,16 +343,16 @@
     <section class="info_stats" id="info-stats" title='{{tooltip}}'>
       <h2>{{view_name}}</h2>
       <section>
-        {% for info_sect in info_data %}
-        {% if info_sect %}
+        {% for sect, info_flds in info_data.items() %}
+        {% if not loop.first %}
         <h3>Stage Info</h3>
         {% endif %}
         <article class="info">
-          {% for info in info_flds[info_sect] %}
+          {% for info in info_flds %}
           {% if tourn.stage_compl >= info.min_stg %}
           <p class="{{info.cls}}">
             {# NOTE that an info_data value of `0` must be passed in as a string #}
-            {% set data_val = info_data[info_sect][loop.index0] or "&nbsp;" %}
+            {% set data_val = info.value or "&nbsp;" %}
             {% set colon = "" if info.label[-1] == "?" else ":" %}
             <label>{{info.label}}</label>{{colon}}
             <span class="{{info.cls}}">{{data_val|safe}}</span>
@@ -367,7 +367,7 @@
 
     {% set view_active = false %}
 
-    {% if view == register %}
+    {% if view == View.REGISTER %}
     {% set view_active = true %}
     {% set locked = (nums_avail == none) %}
     {% set disabled = " disabled" if locked else "" %}
@@ -405,10 +405,10 @@
         <sup>&dagger;</sup> (ping pong ball number)
       </p>
     </section>
-    {% endif %}  {# view == register #}
+    {% endif %}  {# view == View.REGISTER #}
 
-    {% if view in (seeding, round_robin, semifinals, finals) %}
-    {% set stage_ent = user if view == seeding else team %}
+    {% if view in (View.SEEDING, View.ROUND_ROBIN, View.SEMIFINALS, View.FINALS) %}
+    {% set stage_ent = user if view == View.SEEDING else team %}
     <section class="games" id="sd-games">
       {% if stage_games %}
       {% set view_active = true %}
@@ -418,7 +418,7 @@
         <input type="hidden" name="posted_by_num" value="{{user.player_num}}">
         <input type="hidden" name="team_idx" value="{{team_idx}}">
         <input type="hidden" name="ref_score_id" value="{{ref_score_id}}">
-        {% set gm_lbl = "Game" if view in (semifinals, finals) else "Round" %}
+        {% set gm_lbl = "Game" if view in (View.SEMIFINALS, View.FINALS) else "Round" %}
         {% for gm in stage_games %}
         {% set gm_cls = " active" if gm == cur_game else ("" if gm.winner else " pending") %}
         <article class="game{{gm_cls}}" id="{{gm.label}}">
@@ -488,7 +488,7 @@
       </form>
       {% else %}  {# stage_games #}
       <p>
-        {% set plural = "s" if view == round_robin else "" %}
+        {% set plural = "s" if view == View.ROUND_ROBIN else "" %}
         <i>Bracket{{plural}} not yet created</i>
       </p>
       {% endif %}  {# stage_games #}
@@ -515,9 +515,9 @@
       {% endfor %}
     </section>
     {% endif %}  {# leaderboard #}
-    {% endif %}  {# view in (seeding, round_robin, semifinals, finals) #}
+    {% endif %}  {# view in (View.SEEDING, View.ROUND_ROBIN, View.SEMIFINALS, View.FINALS) #}
 
-    {% if view == partners %}
+    {% if view == View.PARTNERS %}
     <section class="picks" id="pt-picks">
       {% if partner_picks %}
       {% set view_active = true %}
@@ -566,7 +566,7 @@
       </p>
       {% endif %}  {# partner_picks #}
     </section>
-    {% endif %}  {# view == partners #}
+    {% endif %}  {# view == View.PARTNERS #}
 
     {% if resources and view_active %}
     <section class="resources">
